# News-Telegram-Finance

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  install_and_run.sh  pyproject.toml  requirements.txt  run_app.py  setup.py  test_tavily.py
aletheia/: __init__.py
aletheia/agents/: __init__.py  orchestrator.py  strategist.py
aletheia/agents/analysts/: __init__.py  intelligence_analyst.py  risk_analyst.py
aletheia/agents/hunters/: __init__.py  narrative_hunter.py  quant_analyst.py
aletheia/api/: __init__.py
aletheia/api/tavily/: __init__.py  client.py
aletheia/graphs/: __init__.py
aletheia/memory/: __init__.py  relational_store.py  vector_store.py
aletheia/tools/: __init__.py
aletheia/ui/: __init__.py  app.py
docker/: Dockerfile  docker-compose.yml
tests/: __init__.py  test_agents.py  test_memory.py
