[tool.poetry]
name = "aletheia"
version = "0.1.0"
description = "An AI-powered cognitive ecosystem for market intelligence and alpha generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-core = "^0.1.0"
langgraph = "^0.0.20"
chromadb = "^0.4.18"
faiss-cpu = "^1.7.4"
openai = "^1.3.0"
streamlit = "^1.28.0"
plotly = "^5.18.0"
pyvis = "^0.3.2"
pandas = "^2.1.1"
numpy = "^1.26.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
yfinance = "^0.2.31"
fredapi = "^0.5.1"
sec-edgar-downloader = "^5.0.1"
praw = "^7.7.1"
tweepy = "^4.14.0"
newsapi-python = "^0.2.7"
arxiv = "^1.4.8"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"